Fix check box spacing

--- a/assets/pixie.css
+++ b/assets/pixie.css
@@ -588,7 +588,7 @@ button::-moz-focus-inner {
   width: 31px;
 }
 .sprite-info-row .check-box {
-  margin-left: 2px;
+  margin-left: 3px;
 }
 
 
